# Eclair_Poirot

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 75430e4407fe_init.py  827ae5da5293_init.py
app/core/: admin_auth.py  db_config.py  dependencies.py
app/sweets/: admin.py  db_manager.py  endpoints.py  models.py  schemas.py
app/users/: admin.py  db_manager.py  endpoints.py  models.py  security.py
requirements/: reqs.txt
